--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -151,4 +151,16 @@ button {
 
 .btn-modal {
   width: 40%;
+
+  @include respond-to(md) {
+    width: 45%;
+  }
+
+  @include respond-to(sm) {
+    width: 55%;
+  }
+
+  @include respond-to(xs) {
+    width: 100%;
+  }
 }
