--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -540,6 +540,24 @@ button {
   width: 40%;
 }
 
+@media (min-width: 992px) and (max-width: 1199px) {
+  .btn-modal {
+    width: 45%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .btn-modal {
+    width: 55%;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  .btn-modal {
+    width: 100%;
+  }
+}
+
 .about-banner {
   background-size: cover;
   height: 100vh;
@@ -1388,7 +1406,25 @@ textarea::placeholder {
 }
 
 .modal-dialog {
-  min-width: 1000px;
+  max-width: 1000px;
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .modal-dialog {
+    max-width: 900px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .modal-dialog {
+    max-width: 700px;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  .modal-dialog {
+    max-width: 100%;
+  }
 }
 
 .modal-body {
@@ -1413,6 +1449,12 @@ textarea::placeholder {
   grid-template-columns: 1fr 1fr;
 }
 
+@media (min-width: 0px) and (max-width: 767px) {
+  .main-modal__content {
+    grid-template-columns: 1fr;
+  }
+}
+
 .main-modal__img {
   width: 100%;
   height: 100%;
@@ -1433,8 +1475,35 @@ textarea::placeholder {
   font-family: "Raleway", sans-serif;
 }
 
+@media (min-width: 992px) and (max-width: 1199px) {
+  .main-modal__title p {
+    font-size: 40px;
+    font-weight: 700;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .main-modal__title p {
+    font-size: 35px;
+    font-weight: 700;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  .main-modal__title p {
+    font-size: 30px;
+    font-weight: 700;
+  }
+}
+
 .main-modal__description {
   padding: 40px 0 20px 0;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .main-modal__description {
+    padding: 15px 0 10px 0;
+  }
 }
 
 .main-modal__description strong {
@@ -1447,6 +1516,13 @@ textarea::placeholder {
   letter-spacing: 1.82px;
   color: #686868;
   font-family: "Raleway", sans-serif;
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  .main-modal__description p {
+    font-size: 15px;
+    font-weight: 300;
+  }
 }
 
 .main-modal__details p {
@@ -1474,12 +1550,36 @@ textarea::placeholder {
   grid-template-columns: 1fr 1fr;
 }
 
+@media (min-width: 0px) and (max-width: 767px) {
+  .main-modal__boxdetails {
+    grid-template-columns: 1fr;
+  }
+}
+
 .main-modal__item:nth-child(2) {
   padding: 20px;
 }
 
+@media (min-width: 0px) and (max-width: 767px) {
+  .main-modal__item:nth-child(2) {
+    padding: 10px;
+  }
+}
+
 .main-modal__price {
   padding: 40px 0;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .main-modal__price {
+    padding: 20px 0;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  .main-modal__price {
+    padding: 20px 0;
+  }
 }
 
 .main-modal__price .main-modal__smallprice {
@@ -1496,6 +1596,27 @@ textarea::placeholder {
   margin-right: 5px;
 }
 
+@media (min-width: 992px) and (max-width: 1199px) {
+  .main-modal__price .main-modal__smallprice span {
+    font-size: 18px;
+    font-weight: 700;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .main-modal__price .main-modal__smallprice span {
+    font-size: 18px;
+    font-weight: 700;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  .main-modal__price .main-modal__smallprice span {
+    font-size: 18px;
+    font-weight: 700;
+  }
+}
+
 .main-modal__price p {
   font-size: 25px;
   font-weight: 700;
@@ -1504,6 +1625,27 @@ textarea::placeholder {
   text-transform: uppercase;
   font-family: "Raleway", sans-serif;
   margin-bottom: 0px;
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+  .main-modal__price p {
+    font-size: 18px;
+    font-weight: 700;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .main-modal__price p {
+    font-size: 18px;
+    font-weight: 700;
+  }
+}
+
+@media (min-width: 0px) and (max-width: 767px) {
+  .main-modal__price p {
+    font-size: 18px;
+    font-weight: 700;
+  }
 }
 
 body {
