--- a/app/about.haml
+++ b/app/about.haml
@@ -42,10 +42,11 @@
                       Pide en línea
     .about-banner{style:"background-image: url('assets/img/About/--46.png');"}
       .overlay
-      .about-banner__text.about-banner__text--acenter
-        .about-banner__title
-          %h3 Noble food.
-          %h3 Noble people.
+      .container
+        .about-banner__text.about-banner__text--acenter
+          .about-banner__title
+            %h3 Noble food.
+            %h3 Noble people.
     .container
       .main-general__boxsubtitle
         .main-general__subtitle
@@ -77,7 +78,7 @@
             .main-ourorigin__box
               .main-general__title.main-general__title--color
                 %h2 nuestra PROMESA
-              .main-ourorigin__descrption
+              .main-ourorigin__description
                 %p Nuestros ingredientes son frescos, toda nuestra materia prima llega a diario a nuestros restaurantes, para asegurar la más a alta calidad.
                 %p Las recetas y preparaciones se realizan todos los días en nuestras cocinas. Los cortes y procesos se hacen de manera artesanal por nuestro equipo. Ningún producto contiene aditivos, preservantes, o colorantes.
                 %p En Poke trabajamos de la mano de nuestros aliados y proveedores locales, en busca de ofrecer los mejores ingredientes para cada preparación.
@@ -89,10 +90,10 @@
       .main-ourorigin__content
         .main-ourorigin__item.main-ourorigin__item--top 
           .container
-            .main-ourorigin__box
+            .main-ourorigin__box.main-ourorigin__box--ml
               .main-general__title.main-general__title--color.title--left
                 %h2 nuestra PROMESA
-              .main-ourorigin__descrption.main-ourorigin__descrption--left
+              .main-ourorigin__description.main-ourorigin__description--left
                 %p Nuestros ingredientes son frescos, toda nuestra materia prima llega a diario a nuestros restaurantes, para asegurar la más a alta calidad.
                 %p Las recetas y preparaciones se realizan todos los días en nuestras cocinas. Los cortes y procesos se hacen de manera artesanal por nuestro equipo. Ningún producto contiene aditivos, preservantes, o colorantes.
                 %p En Poke trabajamos de la mano de nuestros aliados y proveedores locales, en busca de ofrecer los mejores ingredientes para cada preparación.
