--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -5,6 +5,10 @@
   display: flex;
   align-items: center;
 
+  .container {
+    z-index: 999;
+  }
+
 
   .overlay {
     position: absolute;
@@ -17,8 +21,8 @@
 
   .about-banner__text {
     z-index: 99;
-    padding-left: 180px;
-    width: 90%;
+    // padding-left: 180px;
+    width: 100%;
     height: 50%;
 
     &.about-banner__text--acenter {
@@ -63,7 +67,7 @@
 
 
       h3 {
-        padding: 0 25px;
+        // padding: 0 25px;
         color: $white;
         @include font(65px, $superBold);
         line-height: 1;
@@ -128,6 +132,14 @@
   }
 }
 
+.main-ourorigin__box {
+  max-width: 80%;
+
+  &.main-ourorigin__box--ml {
+    margin-left: 17%;
+  }
+}
+
 .main-ourorigin__img {
   height: 780px;
 
@@ -138,7 +150,7 @@
   }
 }
 
-.main-ourorigin__descrption {
+.main-ourorigin__description {
   p {
     text-align: right;
     color: $text;
@@ -154,7 +166,7 @@
     }
   }
 
-  &.main-ourorigin__descrption--left {
+  &.main-ourorigin__description--left {
     p {
       text-align: left;
     }
