--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -21,25 +21,25 @@
     border-color .2s ease-in-out;
   padding: 13px 50px;
   cursor: pointer;
-  font-family: $Raleway;
+  font-family: $Ostrich;
 }
 
 .btn--small {
   padding: 8px 12px;
   min-width: 65px;
-  font-size: 12px;
+  font-size: 15px;
 }
 
 .btn--medium {
   padding: 10px 14px;
   min-width: 85px;
-  font-size: 14px;
+  font-size: 17px;
 }
 
 .btn--large {
   padding: 12px 30px;
   min-width: 105px;
-  font-size: 18px;
+  font-size: 20px;
 
   @include respond-to(xs) {
     padding: 12px 18px;
@@ -75,6 +75,8 @@ button {
   &.btn--filled--buy {
     background-color: $past;
     color: $white;
+    text-transform: none;
+    font-weight: $regular;
 
     &:hover {
       background-color: $past;
@@ -112,7 +114,7 @@ button {
 }
 
 .btn-box {
-  padding: 30px;
+  padding: 30px 0;
 
   @include respond-to(sm) {
     padding: 30px;
