--- a/app/scss/_work.scss
+++ b/app/scss/_work.scss
@@ -9,6 +9,11 @@ label {
   letter-spacing: 0;
   font-family: $Raleway;
 
+  &.label--white {
+    color: $white;
+    @include font(14px, $bold);
+  }
+
   &.label-cap {
     color: $text;
     @include font(18px, $semibold);
@@ -68,8 +73,16 @@ label {
   text-transform: none;
   transition: .3s ease-in-out;
 
+
   @include respond-to(xs) {
     @include font(15px, $regular);
+  }
+
+  &.text-link--white {
+    color: $white;
+    text-decoration: underline;
+    font-style: italic;
+
   }
 
   &:hover {
